--- a/templates/new_door/entity_overview.html
+++ b/templates/new_door/entity_overview.html
@@ -116,24 +116,45 @@
                   </a>
 
                   <a
-                    href="{% url 'delete_entity' entity.pk %}"
-                    class="d-inline"
-                    title="Delete entity"
+                  href="#"
+                  class="d-inline delete-item"
+                  title="Delete unit"
+                  data-toggle="modal" data-target="#deleteToggle"
+                >
+                  <i
+                    class="material-icons"
+                    style="
+                      margin-right: 5px;
+                      margin-top: 10px;
+                      margin-bottom: 20px;
+                      color: #f44336;
+                    "
+                    >delete</i
                   >
-                    <i
-                      class="material-icons"
-                      style="
-                        margin-right: 5px;
-                        margin-top: 10px;
-                        margin-bottom: 20px;
-                        color: #f44336;
-                      "
-                      >delete</i
-                    >
-                    <div class="ripple-container"></div>
-                  </a>
-                </td>
-              </tr>
+                  <div class="ripple-container"></div>
+                </a>
+              </td>
+            </tr>
+                      <!-- Modal -->
+            <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-top" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
+                    <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    Are you sure you want to delete  {{ entity.entity_name }}?
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
+                    <a href="{% url 'delete_entity' entity.pk %}" type="button" class="btn btn-danger">Yes</a>
+                  </div>
+                </div>
+              </div>
+            </div>
               {% endfor %} {% else %} NoData {% endif %}
             </tbody>
           </table>
