--- a/templates/new_door/property_all_overview.html
+++ b/templates/new_door/property_all_overview.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} Property Overview {% endblock title %} {% block body %}
+{% extends 'base.html' %} {% load humanize %}{% block title %} Property Overview {% endblock title %} {% block body %}
 <div class="row">
   <div class="col-md-12">
     <!-- **************Mini Dashbar************************************************** -->
@@ -16,7 +16,7 @@
             </div>
             <h3 class="card-title">
               {% if not total_earning.amount == None %}
-                ${{ total_earning.amount }}
+                ${{ total_earning.amount|intcomma }}
               {% else %}
                 $0
               {% endif %}
@@ -39,7 +39,7 @@
             </div>
             <h3 class="card-title">
               {% if not total_due.amount == None %}
-                ${{ total_due.amount }}
+                ${{ total_due.amount|intcomma }}
               {% else %}
                 $0
               {% endif %}
@@ -226,26 +226,47 @@
                     >
                   </a>
 
+        
                   <a
-                    href="{% url 'delete_property' property.pk  %}"
-                    title="Delete property"
-                    class="d-inline"
+                  href="#"
+                  class="d-inline delete-item"
+                  title="Delete unit"
+                  data-toggle="modal" data-target="#deleteToggle"
+                >
+                  <i
+                    class="material-icons"
+                    style="
+                      margin-right: 5px;
+                      margin-top: 10px;
+                      margin-bottom: 20px;
+                      color: #f44336;
+                    "
+                    >delete</i
                   >
-                    
-                    <i
-                      class="material-icons"
-                      style="
-                        margin-right: 10px;
-                        margin-top: 10px;
-                        margin-bottom: 20px;
-                        color: #f44336;
-                      "
-                      >delete</i
-                    >
-                    <div class="ripple-container"></div>
-                  </a>
-                </td>
-              </tr>
+                  <div class="ripple-container"></div>
+                </a>
+              </td>
+            </tr>
+                      <!-- Modal -->
+            <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-top" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
+                    <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    Are you sure you want to delete  {{ property.property_name }}?
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
+                    <a href="{% url 'delete_property' property.pk  %}" type="button" class="btn btn-danger">Yes</a>
+                  </div>
+                </div>
+              </div>
+            </div>
               {% endfor %} {% else %} NoData {% endif %}
             </tbody>
           </table>
