--- a/templates/new_door/unit_overview.html
+++ b/templates/new_door/unit_overview.html
@@ -15,7 +15,7 @@
             </div>
             <h3 class="card-title">
               {% if not total_earning.amount == 0 %}
-                ${{ total_earning.amount }}
+                ${{ total_earning.amount|intcomma }}
               {% else %}
                 $0
               {% endif %} 
@@ -38,7 +38,7 @@
             </div>
               <h3 class="card-title">
                 {% if not total_due.amount == None %}
-                  ${{ total_due.amount }}
+                  ${{ total_due.amount|intcomma }}
                 {% else %}
                   $0
                 {% endif %}
@@ -179,18 +179,18 @@
                 {% endif %}
               </td>
               <td>{{ unit.tenantcontract.tenant.user.username.capitalize }}</td>
-              <td>${{ unit.rent_amount }}</td>
+              <td>${{ unit.rent_amount|intcomma }}</td>
               <td class="amount">
                 {% if unit.tenantcontract.payment_set.all %}
                   {% for payment in unit.tenantcontract.payment_set.all %}
-                    ${{ payment.amount }}
+                    ${{ payment.amount|intcomma }}
                   {% endfor %}
                 {% endif %}
                </td>
               <td class="remain_amount">
                 {% if unit.tenantcontract.payment_set.all %}
                   {% for payment in unit.tenantcontract.payment_set.all %}
-                    ${{ payment.remain_amount }}
+                    ${{ payment.remain_amount|intcomma }}
                   {% endfor %}
                 {% endif %}
               </td>
@@ -263,9 +263,10 @@
                 </a>
 
                 <a
-                  href="{% url 'delete_unit' unit.pk %}"
-                  class="d-inline"
+                  href="#"
+                  class="d-inline delete-item"
                   title="Delete unit"
+                  data-toggle="modal" data-target="#deleteToggle"
                 >
                   <i
                     class="material-icons"
@@ -281,6 +282,26 @@
                 </a>
               </td>
             </tr>
+                      <!-- Modal -->
+            <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-top" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
+                    <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    Are you sure you want to delete unit flat number {{ unit.flat }}?
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
+                    <a href="{% url 'delete_unit' unit.pk %}" type="button" class="btn btn-danger">Yes</a>
+                  </div>
+                </div>
+              </div>
+            </div>
             {% endfor %} {% else %} NoData {% endif %}
           </tbody>
         </table>
@@ -289,6 +310,8 @@
     <!-- end content-->
   </div>
   <!--  end card  -->
+  
+  
 </div>
 <!-- end row -->
 {% endblock %} {% block occupancy %}
@@ -339,8 +362,6 @@
           break;
       }
     });
-  }
-
-  
+  } 
 </script>
 {% endblock %}
