fix profile, payment popup, view contract

--- a/templates/base.html
+++ b/templates/base.html
@@ -454,7 +454,9 @@
     {% comment %} Core JS Files END from here {% endcomment %}
     <!-- Custom javaScript -->
 
-    {% block occupancy %}{% endblock %}
+    {% block payment %}{% endblock %}
+    {% block unit_overview %}{% endblock %}
+    {% block upload_user_image %}{% endblock %}
       
   </body>
 </html>
