--- a/templates/new_door/dashboard.html
+++ b/templates/new_door/dashboard.html
@@ -1434,7 +1434,7 @@
                       
                  
                     {% else %}
-                    <tr><td>No payments yet</td></tr>
+                    <tr class="text-center"><td colspan="5">No payments yet</td></tr>
                     {% endif %}
                       
                     
