--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -3,9 +3,10 @@
 }
 .gallery {
   position: relative;
-
-  border-radius: 0.2rem;
+  border-radius: 0.5rem;
   border: 1px solid rgb(196, 196, 196);
+  padding: 0px !important;
+  /* overflow: hidden; */
 }
 .gallery img {
   width: 100%;
