--- a/templates/new_door/add_user.html
+++ b/templates/new_door/add_user.html
@@ -50,35 +50,38 @@
           </div>
 
           <div
-            class="col-sm-6 fileinput border justify-content-center fileinput-new text-center d-flex align-items-center flex-column"
+            class="col-sm-6 border justify-content-center text-center d-flex align-items-center flex-column"
             data-provides="fileinput"
             style="min-height: 20vh"
           >
             <div
-              class="fileinput-new thumbnail img-circle float-right"
+              class="float-right imgHulgFile"
               style="width: 50px; height: 50px"
             >
-              <img src="{% static '/img/placeholder.jpg' %}" />
+              <img
+                id="imgFileToChange"
+                style="border-radius: 50%"
+                src="{% static '/img/placeholder.jpg' %}"
+              />
             </div>
 
-              <button
-                class="btn btn-rose btn-round btn-sm"
-                type="button"
-                onclick="document.getElementById('image_upload').click()"
-              >
-                <i class="material-icons">open_in_browser </i> Browse File
-                <div class="ripple-container"></div>
-              </button>
-              <input
-                type="file"
-                name="image"
-                id="image_upload"
-                style="display: none"
-              />
-              {% for error in form.image.errors %}
-              <small style="color: red">{{ error }}</small>
-              {% endfor %}
-              
+            <button
+              class="btn btn-rose btn-round btn-sm"
+              type="button"
+              onclick="document.getElementById('image_upload').click()"
+            >
+              <i class="material-icons">open_in_browser </i> Browse File
+              <div class="ripple-container"></div>
+            </button>
+            <input
+              type="file"
+              name="image"
+              id="image_upload"
+              style="display: none"
+            />
+            {% for error in form.image.errors %}
+            <small style="color: red">{{ error }}</small>
+            {% endfor %}
           </div>
         </div>
         {% comment %} Row2 {% endcomment %}
@@ -136,7 +139,7 @@
           </div>
         </div>
         {% comment %} Row6 {% endcomment %}
-        <div class="row">
+        <div class="row mb-5">
           <label class="col-sm-2 col-form-label">Nationality*</label>
           <div class="col-sm-4">
             <div class="form-group bmd-form-group">{{ form.nationality }}</div>
@@ -150,7 +153,7 @@
           </div>
         </div>
         {% comment %} Row6 {% endcomment %}
-        <div class="mb-4 form-group d-flex">
+        <!-- <div class="mb-4 form-group d-flex">
           <div class="form-check form-check-inline">
             <label class="form-check-label" for="is_owner">
               <input
@@ -167,7 +170,7 @@
               </span>
             </label>
           </div>
-        </div>
+        </div> -->
         <button class="btn btn-rose btn-round w-25 float-right" type="Submit">
           <i class="material-icons">near_me </i> Submit
           <div class="ripple-container"></div>
@@ -176,4 +179,9 @@
     </div>
   </form>
 </div>
+
+{% block upload_user_image %}
+<script src="{% static 'js/uploadUserImage.js' %}"></script>
+{% endblock %}
+
 {% endblock body %}
