--- a/templates/new_door/add_user_unit.html
+++ b/templates/new_door/add_user_unit.html
@@ -47,18 +47,39 @@
           </div>
 
           <div
-            class="col-sm-6 fileinput border justify-content-center fileinput-new text-center d-flex align-items-center flex-column"
-            data-provides="fileinput"
-            style="min-height: 20vh"
+          class="col-sm-6 border justify-content-center text-center d-flex align-items-center flex-column"
+          data-provides="fileinput"
+          style="min-height: 20vh"
+        >
+          <div
+            class="float-right imgHulgFile"
+            style="width: 50px; height: 50px"
           >
-            <div
-              class="fileinput-new thumbnail img-circle float-right"
-              style="width: 50px; height: 50px"
-            >
-              <img src="{% static '/img/placeholder.jpg' %}" />
-            </div>
-            {{ form.image }}
+            <img
+              id="imgFileToChange"
+              style="border-radius: 50%"
+              src="{% static '/img/placeholder.jpg' %}"
+            />
           </div>
+
+          <button
+            class="btn btn-rose btn-round btn-sm"
+            type="button"
+            onclick="document.getElementById('image_upload').click()"
+          >
+            <i class="material-icons">open_in_browser </i> Browse File
+            <div class="ripple-container"></div>
+          </button>
+          <input
+            type="file"
+            name="image"
+            id="image_upload"
+            style="display: none"
+          />
+          {% for error in form.image.errors %}
+          <small style="color: red">{{ error }}</small>
+          {% endfor %}
+        </div>
         </div>
         {% comment %} Row2 {% endcomment %}
 
@@ -115,7 +136,7 @@
           </div>
         </div>
         {% comment %} Row6 {% endcomment %}
-        <div class="row">
+        <div class="row mb-5">
           <label class="col-sm-2 col-form-label">Nationality*</label>
           <div class="col-sm-4">
             <div class="form-group bmd-form-group">{{ form.nationality }}</div>
@@ -129,17 +150,17 @@
           </div>
         </div>
         {% comment %} Row6 {% endcomment %}
-        <div class="mb-4 form-group d-flex">
+        <!-- <div class="mb-4 form-group d-flex">
           <div class="col-md-4">
             <label class="form-check-label" for="is_tenant">
-              {{ form.is_tenant }}
+              
               <span style="color: #a5a5a5">Is tenant</span>
               <span class="form-check-sign" style="left: 146px">
                 <span class="check"></span>
               </span>
             </label>
           </div>
-        </div>
+        </div> -->
         <button class="btn btn-rose btn-round w-25 float-right" type="Submit">
           <i class="material-icons">near_me </i> Submit
           <div class="ripple-container"></div>
@@ -148,4 +169,8 @@
     </div>
   </form>
 </div>
+
+{% block upload_user_image %}
+<script src="{% static 'js/uploadUserImage.js' %}"></script>
+{% endblock %}
 {% endblock body %}
