--- a/templates/payment/payment.html
+++ b/templates/payment/payment.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load humanize %} {% block title %} Payment {% endblock title %} {% block body %}
+{% extends 'base.html' %} {% load static %} {% load humanize %} {% block title %} Payment {% endblock title %} {% block body %}
 <style></style>
 <div class="col-md-12">
   <form
@@ -289,87 +289,40 @@
         </div>
         {% comment %} Row5 end {% endcomment %}
         <br />
-        <button class="btn btn-rose btn-round float-right" type="Submit">
+        
+        <button class="btn btn-rose btn-round float-right" data-toggle="modal" data-target="#deleteToggle" type="button">
           <i class="material-icons">near_me </i> Submit
           <div class="ripple-container"></div>
+        </button>
+        <button type="submit" id="acceptTriggerSubmit" style="display: none;" class="close p-3" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
         </button>
       </div>
     </div>
   </form>
+  <!-- Modal -->
+  <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-top" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" style="font-weight: 600; text-transform: uppercase;" id="exampleModalLongTitle">Make Payment</h4>
+          <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Are you sure you want to make a payment of <span style="font-weight: 600; color: red;">${{ final_amount }}</span>?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-info px-5 py-2" data-dismiss="modal">No</button>
+          <button type="button" id="triggerSubmit" class="btn btn-success ml-3 px-5 py-2" data-dismiss="modal">Yes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <script src="https://js.stripe.com/v3/"></script>
-<script>
-  // Create a Stripe client.
-  var stripe = Stripe(
-    "pk_test_51I0mEFGz8qAcurV0ilVGprW4afDNoCkqdBJTJK6Rjgyuc4WBY20GRqW8pGi21QlGsKNbq4uP8Cv8Bjs7ezTJg1ST00ABvwre5y"
-  );
-
-  // Create an instance of Elements.
-  var elements = stripe.elements();
-
-  // Custom styling can be passed to options when creating an Element.
-  // (Note that this demo uses a wider set of styles than the guide below.)
-  var style = {
-    base: {
-      color: "#32325d",
-      fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
-      fontSmoothing: "antialiased",
-      fontSize: "16px",
-      "::placeholder": {
-        color: "#aab7c4",
-      },
-    },
-    invalid: {
-      color: "#fa755a",
-      iconColor: "#fa755a",
-    },
-  };
-
-  // Create an instance of the card Element.
-  var card = elements.create("card", { style: style });
-
-  // Add an instance of the card Element into the `card-element` <div>.
-  card.mount("#card-element");
-
-  // Handle real-time validation errors from the card Element.
-  card.on("change", function (event) {
-    var displayError = document.getElementById("card-errors");
-    if (event.error) {
-      displayError.textContent = event.error.message;
-    } else {
-      displayError.textContent = "";
-    }
-  });
-
-  // Handle form submission.
-  var form = document.getElementById("payment-form");
-  form.addEventListener("submit", function (event) {
-    event.preventDefault();
-
-    stripe.createToken(card).then(function (result) {
-      if (result.error) {
-        // Inform the user if there was an error.
-        var errorElement = document.getElementById("card-errors");
-        errorElement.textContent = result.error.message;
-      } else {
-        // Send the token to your server.
-        stripeTokenHandler(result.token);
-      }
-    });
-  });
-
-  // Submit the form with the token ID.
-  function stripeTokenHandler(token) {
-    // Insert the token ID into the form so it gets submitted to the server
-    var form = document.getElementById("payment-form");
-    var hiddenInput = document.createElement("input");
-    hiddenInput.setAttribute("type", "hidden");
-    hiddenInput.setAttribute("name", "stripeToken");
-    hiddenInput.setAttribute("value", token.id);
-    form.appendChild(hiddenInput);
-
-    // Submit the form
-    form.submit();
-  }
-</script>
+{% block payment %}
+<script src="{% static 'js/payment.js' %}"></script>
+{% endblock %}
 {% endblock body %}
